--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -2,8 +2,8 @@ FROM python:3.9
 
 RUN mkdir /app
 WORKDIR /app
-COPY requirements.txt /app/requirements.txt
-RUN pip3 install -r /app/requirements.txt
+COPY requirements.txt /app/requirements_api.txt
+RUN pip3 install -r /app/requirements_api.txt
 COPY . /app
 
 ENTRYPOINT ["python"]
