--- a/docker/Dockerfile.wrk
+++ b/docker/Dockerfile.wrk
@@ -3,7 +3,7 @@ FROM python:3.9
 RUN mkdir /app/
 WORKDIR /app/ 
 COPY requirements_wrk.txt /app/requirements_wrk.txt
-RUN pip3 install requirements_wrk.txt
+RUN pip3 install -r requirements_wrk.txt
 
 COPY ./src/* /app/
 
